# boto3sample

./: pyproject.toml
boto3sample/sqs/: receive.py  receive_lambda.py  send.py
boto3sample/timestream/: create.py  query.py  write_record.py
